add "brauch ich" button